tests/handlers/snapshots/handler_tests__handlers__knowledge_handler__record_knowledge_invalid_character_error.snap
---
source: tests/handlers/knowledge_handler.rs
assertion_line: 635
expression: error_message
---
Invalid character_id: Parse error: Unexpected end of file, expected :
 --> [1:14]
  |
1 | invalid_format
  |              ^
